Closed Bug 819965 Opened 12 years ago Closed 12 years ago

Unable to silence or control FM radio volume via 'audio.volume.content' (or using the device rocker)

Categories

(Firefox OS Graveyard :: Gaia::Settings, defect, P2)

ARM
Android
defect

Tracking

(blocking-basecamp:+, firefox19 fixed, firefox20 fixed, b2g18 fixed)

VERIFIED FIXED
B2G C3 (12dec-1jan)
blocking-basecamp +
Tracking Status
firefox19 --- fixed
firefox20 --- fixed
b2g18 --- fixed

People

(Reporter: aaronmt, Assigned: rlin)

Details

Attachments

(1 file, 1 obsolete file)

https://hg.mozilla.org/releases/mozilla-aurora/rev/0978db919b27 via bug 814326 comment #6 indicates that `audio.volume.content` can be used for volume control of the FM radio. 

Toggling `audio.volume.content` from default volume to `0` has no effect. With my headphones in I can still hear tuned frequencies (albeit static in most cases).

--
Tested via Unagi-eng 12/09
I think it's possible that the index 0 just lowest the volume but FM chip still active, user may hear very small sound in a quite environment.
This isn't quiet for me, adjusting the volume makes no difference. I can replicate this manually with unagi. The hardware volume buttons do not adjust the volume delivered through the headphones.
(In reply to Dave Hunt (:davehunt) from comment #2)
> This isn't quiet for me, adjusting the volume makes no difference. I can
> replicate this manually with unagi. The hardware volume buttons do not
> adjust the volume delivered through the headphones.
Can you share the build that you try? 
Several days ago, we have the volume control problem and fixed it recently.
Assignee: nobody → rlin
I'm using 12/14 and I still cant control the volume in the FM radio. 

Changing summary as it seems like volume cant be controlled using device rocker either.

--
Unagi (12/14)
Summary: Unable to silence FM radio via 'audio.volume.content' → Unable to silence or control FM radio volume via 'audio.volume.content' (or using the device rocker)
On 12/16 build:
This happens.
But once I press home button when I am listening to FM, the volume adjusted by rockers immediately comes into effect.

GUESS: Only when visibility is hidden, the fm listens to `audio.volume.content`. Otherwise it's a fixed value(When the FM app is foreground.)
Attached patch patch1 (obsolete) — Splinter Review
set the initial value
Attachment #692876 - Flags: review?(jonas)
Comment on attachment 692876 [details] [diff] [review]
patch1

Review of attachment 692876 [details] [diff] [review]:
-----------------------------------------------------------------

r=me if you set it in the colon list instead.
Attachment #692876 - Flags: review?(jonas) → review+
Attached patch check in patchSplinter Review
set it in the colon list.
blocking-basecamp: --- → ?
Whiteboard: checkin-needed
blocking-basecamp: ? → +
Priority: -- → P2
Attachment #692876 - Attachment is obsolete: true
https://hg.mozilla.org/integration/mozilla-inbound/rev/69dd94ceaf7e

Please use the checkin-needed keyword in the future instead of setting it on the whiteboard. Also, can you please add a space between your name and your email address in your hg configuration? Thanks!
Whiteboard: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/69dd94ceaf7e
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Is this patch sync to b2g-18? 
I don't see this change on this folder.
Verified on Unagi, Build 010320130070201.
Status: RESOLVED → VERIFIED
No longer blocks: 826393
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: