Bug 819965 - Unable to silence or control FM radio volume. r=sicking